# wqf7008-fb-human-or-not

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: 01_eda.ipynb
src/wqf7008_fb_human_or_bot/: __init__.py  cli.py  configs.py  features.py  metrics.py  predict.py  pretrain.py  train.py
src/wqf7008_fb_human_or_bot/datasets/: __init__.py  bidder_graph.py  bidder_sequence.py
src/wqf7008_fb_human_or_bot/models/: __init__.py  base.py  gbm.py  gnn.py  hybrid.py  tffm.py
src/wqf7008_fb_human_or_bot/utils/: data_process.py
utils/: data_process.py
