[project]
name = "wqf7008-fb-human-or-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hongjiaherng", email = "jiaherng2001@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[project.scripts]
wqf7008-fb-human-or-bot = "wqf7008_fb_human_or_bot:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
