[project]
name = "wqf7008-fb-human-or-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hongjiaherng", email = "jiaherng2001@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5",
    "typer>=0.12",
    "tqdm>=4.66",
    "torch-geometric>=2.7.0",
    "pytorch-frame>=0.3.0",
    "pydantic-settings>=2.14.0",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.11", "torchvision>=0.26"]
cu130 = ["torch>=2.11", "torchvision>=0.26"]

[project.scripts]
bidbot = "wqf7008_fb_human_or_bot.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pytest>=8.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ty.src]
include = ["src"]
